Update title page

--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 \begin{center}
-\noindent {\large \textbf{UNIVERSITÉ DE NICE - SOPHIA ANTIPOLIS}} \\
+\noindent {\large \textbf{Institut Supérieur de l'Aéronautique et de l'Espace - TOULOUSE}} \\
 \vspace*{0.3cm}
-\noindent {\LARGE \textbf{ÉCOLE DOCTORALE STIC}} \\
-\noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
+\noindent {\LARGE \textbf{ÉCOLE DOCTORALE MITT}} \\
+\noindent \textbf{MATHEMATIQUES INFORMATIQUE TELECOMMUNICATIONS de TOULOUSE} \\
 \vspace*{0.5cm}
 \noindent \Huge \textbf{T H È S E} \\
 \vspace*{0.3cm}
@@ -11,33 +11,33 @@
 \vspace*{0.3cm}
 \noindent \LARGE \textbf{Docteur en Sciences} \\
 \vspace*{0.3cm}
-\noindent \Large de l'Université de Nice - Sophia Antipolis \\
+\noindent \Large de l'ISA\'E - Toulouse \\
 \noindent \Large \textbf{Mention : \textsc{Informatique}}\\
 \vspace*{0.4cm}
 \noindent \large {Présentée et soutenue par\\}
-\noindent \LARGE Olivier \textsc{Commowick} \\
+\noindent \LARGE Florian \textsc{MANY} \\
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Création et utilisation d'atlas anatomiques numériques pour la radiothérapie}} \\
+\noindent {\Huge \textbf{Combinaison des aspects sûreté de fonctionnement et temps réel pour la conception de plateformes avioniques}} \\
 \vspace*{0.8cm}
-\noindent \Large Thèse dirigée par Grégoire \textsc{Malandain} \\
+\noindent \Large Thèse dirigée par David  \textsc{Doose} \\
 \vspace*{0.2cm}
-\noindent \Large préparée à l'INRIA Sophia Antipolis, Projet \textsc{Asclepios} \\
+\noindent \Large préparée à l'Office National des \'Etudes et Recherches Aérospatiales (ONERA)\\
 \vspace*{0.2cm}
-\noindent \large soutenue le 14 février 2007 \\
+\noindent \large soutenue le  \\
 \vspace*{0.5cm}
 \end{center}
 \noindent \large \textbf{Jury :} \\
 \begin{center}
 \noindent \large
 \begin{tabular}{llcl}
-      \textit{Rapporteurs :}	& Patrick \textsc{Clarysse}		& - & CNRS (CREATIS)\\
-				& Louis \textsc{Collins}		& - & McGill University\\
-      \textit{Directeur :}	& Grégoire \textsc{Malandain}		& - & INRIA (Asclepios)\\
-      \textit{Président :}	& Nicholas \textsc{Ayache}		& - & INRIA (Asclepios)\\
-      \textit{Examinateurs :}   & Pierre-Yves \textsc{Bondiau}          & - & Centre Antoine Lacassagne (Nice)\\
-      				& Guido \textsc{Gerig}			& - & University of North Carolina\\
-      				& Vincent \textsc{Grégoire}		& - & Université Catholique de Louvain\\
-      \textit{Invité :}		& Hanna \textsc{Kafrouni}		& - & DOSISoft S.A.
+      \textit{Rapporteurs :}	&		& - & \\
+				& 	& - & \\
+      \textit{Directeur :}	& 		& - & \\
+      \textit{Président :}	& 		& - & \\
+      \textit{Examinateurs :}   &        & - & \\
+      				& 			& - & \\
+      				& 		& - & \\
+      \textit{Invité :}		& 		& - &
 \end{tabular}
 \end{center}
 \end{titlepage}
